# Jipp2

./: CMakeLists.txt
E1NoCopyingConstructor/include/: Point.h
E1NoCopyingConstructor/src/: Point.cpp  main.cpp
Fiszki/: CMakeLists.txt
Fiszki/include/: Biblioteka_dodatkowa.h  Fiszki.h  Polimorfizm.h  Program.h
Fiszki/src/: Biblioteka_dodatkowa.cpp  Fiszki.cpp  Polimorfizm.cpp  Program.cpp  main.cpp
Lab7/: CMakeLists.txt
Lab7/include/: Klasy.h
Lab7/src/: klasy.cpp  main.cpp
Zadanka1/: CMakeLists.txt
Zadanka1/src/: struktury.cpp
Zadanka2/: CMakeLists.txt
Zadanka2/include/: Pojazd.h
Zadanka2/src/: Pojazd.cpp  main.cpp
Zadanka3/: CMakeLists.txt
Zadanka3/include/: line.h  stop.h
Zadanka3/src/: line.cpp  main.cpp  stop.cpp
allocation_basics/: CMakeLists.txt  main.cpp
firstLibCall/: CMakeLists.txt  main.cpp
firstlib/: CMakeLists.txt
firstlib/include/: lib.h
firstlib/src/: lib.cpp
friend/: CMakeLists.txt
friend/include/: Vector.h
friend/src/: Vector.cpp  main.cpp
matrixApp/: CMakeLists.txt  main.cpp
matrixLib/: CMakeLists.txt
matrixLib/include/: matrixlib.h
matrixLib/src/: matrixlib.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
