cmake_minimum_required(VERSION 3.16)


add_subdirectory(allocation_basics)
add_subdirectory(simpleCalc)
add_subdirectory(firstLibCall)
add_subdirectory(firstlib)
add_subdirectory(matrixApp)
add_subdirectory(matrixLib)
add_subdirectory(Zadanka1)
add_subdirectory(E1NoCopyingConstructor)
add_subdirectory(Zadanka2)
add_subdirectory(friend)
add_subdirectory(Lab7)
add_subdirectory(Zadanka3)
add_subdirectory(Fiszki)

